--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <h1>Belajar CI/CD untuk Pemula</h1>
-    <p>Ini adalah contoh halaman HTML yang kita buat test
+    <p>Ini adalah contoh halaman HTML yang kita buat test trigger
     </p>
 </body>
 
