--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Belajar CI/CD untuk Pemula </title>
+    <title>Belajar CI/CD </title>
     <style>
         body {
             background-color: #2D2D2D;
